src/sweep/snapshots/linesweeper__sweep__sweep_line__tests__regression_position_state.snap
---
source: src/sweep/sweep_line.rs
expression: "snapshot_outputs(segs, 0.1)"
---
[
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(5),
          exit: false,
          enter: true,
          lower_bound: -0.1,
          upper_bound: 1.1,
          in_changed_interval: true,
          old_idx: Some(0),
          old_seg: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(4),
          exit: false,
          enter: true,
          lower_bound: 0.9,
          upper_bound: 1.1,
          in_changed_interval: true,
          old_idx: Some(1),
          old_seg: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(1),
          exit: false,
          enter: true,
          lower_bound: 0.9,
          upper_bound: 1.1,
          in_changed_interval: true,
          old_idx: Some(2),
          old_seg: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(2),
          exit: false,
          enter: true,
          lower_bound: 0.9,
          upper_bound: 2.1,
          in_changed_interval: true,
          old_idx: Some(3),
          old_seg: None,
        ),
      ],
    ),
    changed: [
      ChangedInterval(
        segs: Range(
          start: 0,
          end: 4,
        ),
        horizontals: None,
      ),
    ],
  ),
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(0),
          exit: true,
          enter: true,
          lower_bound: -0.1,
          upper_bound: 1.1,
          in_changed_interval: true,
          old_idx: Some(0),
          old_seg: Some(SegIdx(5)),
        ),
        SegmentOrderEntry(
          seg: SegIdx(4),
          exit: false,
          enter: false,
          lower_bound: 0.9,
          upper_bound: 1.1,
          in_changed_interval: false,
          old_idx: None,
          old_seg: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(1),
          exit: false,
          enter: false,
          lower_bound: 0.9,
          upper_bound: 1.1,
          in_changed_interval: false,
          old_idx: None,
          old_seg: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(3),
          exit: true,
          enter: true,
          lower_bound: 0.9,
          upper_bound: 2.1,
          in_changed_interval: true,
          old_idx: Some(3),
          old_seg: Some(SegIdx(2)),
        ),
      ],
    ),
    changed: [
      ChangedInterval(
        segs: Range(
          start: 0,
          end: 1,
        ),
        horizontals: None,
      ),
      ChangedInterval(
        segs: Range(
          start: 3,
          end: 4,
        ),
        horizontals: None,
      ),
    ],
  ),
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(0),
          exit: true,
          enter: false,
          lower_bound: -0.1,
          upper_bound: 1.1,
          in_changed_interval: true,
          old_idx: Some(0),
          old_seg: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(4),
          exit: false,
          enter: false,
          lower_bound: 0.9,
          upper_bound: 1.1,
          in_changed_interval: true,
          old_idx: Some(1),
          old_seg: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(1),
          exit: true,
          enter: false,
          lower_bound: 0.9,
          upper_bound: 1.1,
          in_changed_interval: true,
          old_idx: Some(2),
          old_seg: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(3),
          exit: false,
          enter: false,
          lower_bound: 0.9,
          upper_bound: 2.1,
          in_changed_interval: true,
          old_idx: Some(3),
          old_seg: None,
        ),
      ],
    ),
    changed: [
      ChangedInterval(
        segs: Range(
          start: 0,
          end: 4,
        ),
        horizontals: None,
      ),
    ],
  ),
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(4),
          exit: true,
          enter: false,
          lower_bound: 0.9,
          upper_bound: 1.1,
          in_changed_interval: true,
          old_idx: Some(0),
          old_seg: None,
        ),
        SegmentOrderEntry(
          seg: SegIdx(3),
          exit: true,
          enter: false,
          lower_bound: 0.9,
          upper_bound: 2.1,
          in_changed_interval: true,
          old_idx: Some(1),
          old_seg: None,
        ),
      ],
    ),
    changed: [
      ChangedInterval(
        segs: Range(
          start: 0,
          end: 2,
        ),
        horizontals: None,
      ),
    ],
  ),
]
